--- a/style.css
+++ b/style.css
@@ -66,3 +66,30 @@ header design
     height: 595px;
     margin-top: 50px;
 }
+
+/* -------------
+ Inner Container 
+ ---------------- */
+
+.menue{
+    background-color: #161616;
+    width: 310px;
+    height: 310px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+}
+.menue-items{
+    width: 240px;
+    height: 50px;
+    text-decoration: none;
+    color: black;
+    background-color: white;
+    text-align: center;
+    border-radius: 10px;
+    font-size: 20px;
+    padding: 10px;
+}
+
